--- a/package.json
+++ b/package.json
@@ -49,13 +49,16 @@
   },
   "dependencies": {
     "@atomist/skill": "^0.5.1",
+    "fs-extra": "^9.0.1",
     "license-checker": "^25.0.1",
+    "lodash": "^4.17.20",
     "spdx-license-list": "^6.3.0"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^1.7.1",
+    "@types/fs-extra": "^9.0.4",
+    "@types/lodash": "^4.14.165",
     "@types/mocha": "^8.0.4",
-    "@types/power-assert": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.13.0",
@@ -66,11 +69,9 @@
     "lint-staged": "^10.5.1",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
-    "power-assert": "^1.6.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "supervisor": "^0.12.0",
-    "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
   },
